# Mauve-Analysis

./: .gitignore  AUTHORS  ChangeLog  README  THANKS  c
R/: gene-list.R  gene-list.R.50.1  gene-list.R.50.2  gene-list.R.50.3  gene-list.R.50.4  gene-list.R.60.1  gene-list.R.60.2  gene-list.R.60.3  gene-list.R.60.4  gene-list.R.70.1  gene-list.R.70.2  gene-list.R.70.3  gene-list.R.70.4  gene-list.R.80.1  gene-list.R.80.2  gene-list.R.80.3  gene-list.R.80.4  gene-list.R.90.1  gene-list.R.90.2  gene-list.R.90.3  gene-list.R.90.4  gene-list.sh  mannwhitney.R  mannwhitney.R.out  obsiter.R  obsiter.R.1  obsiter.R.2  obsiter.R.3  obsiter.R.4  obsiter.R.cornell1  obsiter.R.cornell2  obsiter.R.cornell3  obsiter.R.cornell4  obsiter.R.cornellfx10  obsiter.R.cornellfx5  obsiter.R.cornellfx6  obsiter.R.cornellfx7  obsiter.R.cornellfx8  obsiter.R.cornellfx9  obsiter.sh  (+7 more)
bacillus/: README  run.sh
cac/: README
conf/: README.template
data/: README  cornell1  cornell2  cornell3  cornell4  cornell5  cornell6  cornell8x2  cornellf  cornellf-3-in.block  cornellf-3.tree  cornellf8  cornellf8-3-corrected.tree  cornellf8-3.tree  cornellfx10  cornellfx5  cornellfx6  cornellfx7  cornellfx8  cornellfx9  in.gene.4.block  mowgli.tree  projectname.template  pyogenes  pyogenes11  spyogenes  test-in.block  yogurt
doc/: Manual  README  REPORT-041911  clonalorigin.key  figure-tree.key  manuscript-with-ref.lyx  manuscript.lyx  manuscript.tex  manuscript_plos.tex  mauve-analysis-figure1-with-4.key  mauve-analysis-figure1.key  mauve-analysis.key  othergenome.tree  run  siepel-strep.bib  splitpdf  supplementary.tex  ucsc.key  vimrc  vims
manuscript/: .README.swp  README  species-with-scale.tre  species-with-see.figtree  species-with-see.tre  species.tre
noweb/: simmlst.lyx  simmlst.nw
pl/: README  analyze-run-clonalorigin2-simulation2-analyze.pl  analyze-run-clonalorigin2-simulation2-prepare.pl  analyze-run-clonalorigin2-simulation2.pl  bioperl-get-protein.pl  blocksplit2smallerfasta.pl  cac.pl  checkxmfa.pl  clonalorigin2-simulation3-analyze.pl  clonalorigin2-simulation3-prepare.pl  combine-import-ratio-jcvi-role.pl  compute-block-length.pl  compute-heatmap-recedge.pl  computeMedians.pl  convert-gff-ingene.pl  copy.pl  core2smallercore.pl  count-observed-recedge.pl  create-ingene.pl  extract-cornell-species-tree.pl  extract-species-tree.pl  extractClonalOriginParameter.pl  extractClonalOriginParameter10.pl  extractClonalOriginParameter11.pl  extractClonalOriginParameter12.pl  extractClonalOriginParameter2.pl  extractClonalOriginParameter3.pl  extractClonalOriginParameter4.pl  extractClonalOriginParameter5.pl  extractClonalOriginParameter6.pl  extractClonalOriginParameter7.pl  extractClonalOriginParameter8.pl  extractClonalOriginParameter9.pl  findBlocksWithInsufficientConvergence.pl  get-primary-jcvi-loci.pl  list-gene-go.pl  list-locus-tag-go-jcvi-role.pl  listgenegff.pl  locate-gene-in-block.pl  map-tree-topology.pl  (+46 more)
ps/: color.ps  colorbars.pl  figure2.pl  font.ps  grid.pl  row.pl  rowbars.pl  tick.pl  tutorial.ps
sh/: .clonalorigin2-simulation3-prepare.sh.swp  analyze-run-clonalorigin2-simulation.sh  analyze-run-clonalorigin2-simulation2-analyze.sh  analyze-run-clonalorigin2-simulation2-prepare.sh  analyze-run-clonalorigin2-simulation2-receive.sh  analyze-run-clonalorigin2-simulation2.sh  batch.sh  choose-simulation.sh  choose-species.sh  clonalorigin-common.sh  clonalorigin2-simulation3-analyze.sh  clonalorigin2-simulation3-each-block.sh  clonalorigin2-simulation3-prepare.sh  clonalorigin2-simulation3-receive.sh  clonalorigin2-simulation3.sh  compute-block-length.sh  compute-global-median.sh  compute-heatmap-recedge.sh  compute-prior-count-recedge.sh  conf.sh  convert-gff-ingene.sh  copy-mauve-alignment.sh  copy-run-sh.sh  copyright.sh  count-observed-recedge.sh  create-ingene.sh  divide-simulated-xmfa-data.sh  divide-simulated-xml-data.sh  extract-species-tree.sh  filter-blocks.sh  heatmap-compute.sh  heatmap-get-observed.sh  hms.sh  init-file-system.sh  kill.sh  kill2.sh  list-gene-go.sh  locate-gene-in-block.sh  manuscript.sh  map-tree-topology.sh  (+60 more)
simulation/: cornell5.tree  in411.block
species/: bacillus  cornell1  cornell2  cornell3  cornell4  cornell5  cornell6  cornell8x2  cornellf  cornellf8  cornellfx10  cornellfx5  cornellfx6  cornellfx7  cornellfx8  cornellfx9  mutans  pyogenes  pyogenes11  s1  s10  s11  s12  s13  s14  s15  s16  s17  s18  s2  s3  s4  s5  s6  s7  s8  s9  yogurt
spneumoniae/: README  run.sh
spyogenes/: README  run.sh
src/: CMakeLists.txt  README  compute_watterson_estimate.cpp
src/clonalorigin/: CMakeLists.txt  FindGSL.cmake  README  data.cpp  data.h  metropolis.cpp  move.h  moveaddedge.cpp  moveaddedge.h  moveageclonal.cpp  moveageclonal.h  movedelta.cpp  moveedgechange.cpp  moveedgechange.h  movegreedytree.cpp  movegreedytree.h  moveregraftclonal.cpp  moveregraftclonal.h  moveremedge.cpp  moveremedge.h  moverho.cpp  movescaletree.cpp  movesitechange.cpp  movesitechange.h  movetheta.cpp  movetimechange.cpp  movetimechange.h  mpiutils.cpp  mpiutils.h  mydata.cpp  node.cpp  param.cpp  param.h  rectree.cpp  rectree.h  rng.cpp  slotallocator.h  tree.cpp  tree.h  warg.cpp  (+5 more)
src/utils/: ExSequence.cpp
src/warg2/: CMakeLists.txt  SimpleGlob.h  SimpleOpt.h  data.cpp  data.h  exponential.h  metropolis.cpp  metropolis.h  move.cpp  move.h  moveaddedge.cpp  moveaddedge.h  moveageclonal.cpp  moveageclonal.h  movedelta.cpp  movedelta.h  moveedgechange.cpp  moveedgechange.h  movegreedytree.cpp  movegreedytree.h  moveregraftclonal.cpp  moveregraftclonal.h  moveremedge.cpp  moveremedge.h  moverho.cpp  moverho.h  movescaletree.cpp  movescaletree.h  movesitechange.cpp  movesitechange.h  movetheta.cpp  movetheta.h  movetimechange.cpp  movetimechange.h  mpiutils.cpp  mpiutils.h  mydata.cpp  node.cpp  node.h  param.cpp  (+17 more)
src/warggui/: .CMakeLists.txt.swp  CMakeLists.txt  gui.cpp  heatimpl.cpp  heatimpl.h  mainwindowimpl.cpp  mainwindowimpl.h  outputfile.cpp  outputfile.h  paramqt.cpp  paramqt.h
streptococcus/: README  run.sh
test/: test.sh
ucsc/: trackDb.ra  ucsc-matt.sh  (+2 more)
(+75 files in other folders)
